# network-manager-openconnect

auth-dialog/: Makefile.am  main.c  nm-openconnect-auth-firefox
debian/: changelog  control  rules
debian/patches/: 0001-Allow-to-enter-useragent-to-pass-to-openconnect.patch  0002-Do-not-require-GWCERT-in-service-because-it-looks-li.patch  0003-Allow-authentication-with-firefox.patch  0004-Add-support-for-clean-FF-profile.patch  0005-Hack-add-po-Makefile.in.in-to-allow-build-to-run.patch  0006-fix-conflict.patch  series
po/: en_US.po
properties/: nm-openconnect-dialog.ui  nm-openconnect-editor-plugin.c  nm-openconnect-editor.c
shared/: nm-service-defines.h
src/: nm-openconnect-service.c
